kubernetes/istio/pod-info-gateway-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pod-info-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pod-info-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - pod-info-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: pod-info-service
        port:
          number: 9898
